@@ -282,6 +282,7 @@ t/375_user_defined.t
 t/376_cancel_user_defined.t
 t/377_user_defined_with_error.t
 t/378_user_defined_corrupt_image.t
+t/379_user_defined.t
 t/411_tesseract.t
 t/412_tesseract_in_thread.t
 t/413_cancel_tesseract.t
